testsuite/tests/typing-objects/pr6383.ml
(* TEST
   * toplevel
*)

let f (x: #M.foo) = 0;;
